Replace more image buttons and make some fixes.

--- a/gobotany/simplekey/templates/gobotany/_results_main_content.html
+++ b/gobotany/simplekey/templates/gobotany/_results_main_content.html
@@ -60,13 +60,13 @@
 
         <div class="section clear">
             <h5 class="left help">Start Over:</h5>
-            <a class="clear-all-btn left orange-btn caps">Clear All</a>
+            <a class="clear-all-btn left orange-button caps">Clear All</a>
         </div>
 
         <div class="section help">
             <h5 class="left help last">Need Help?</h5>
             <a href="{% url 'site-getting-started' %}"
-                class="get-help-btn left orange-btn caps">Get Help</a>
+                class="get-help-btn left orange-button caps">Get Help</a>
         </div>
     </div>
 
