--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -383,7 +383,7 @@ footer .support { margin-right: 0; padding: 18px 0; }
 .wait-spinner * { display: none; }
 
 /* Images (gallery with previous/next buttons, or single) */
-.img-gallery { float: left; margin: 0 10px 0 0; position: relative; width: 244px; }
+.img-gallery { float: left; margin: 0 10px 0 0; position: relative; width: 244px; -webkit-user-select: none; -moz-user-select: none; user-select: none; }
 .img-gallery .img-container { height: 239px; overflow: hidden; position: relative; width: 239px; }
 .img-gallery .frame { border: 5px solid rgba(255, 255, 255, 0.8); height: 229px; position: absolute; top: 0; width: 229px; z-index: 100; box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); }
 .img-gallery .images { clear: both; margin: 0; padding: 0; position: absolute; width: 12000px; }
