--- a/gobotany/plantshare/templates/checklist_detail.html
+++ b/gobotany/plantshare/templates/checklist_detail.html
@@ -14,7 +14,9 @@
 <h1>Plant Checklist: {{ checklist.name }}</h1>
 
 <div class="ps-section">
-    <p>Comments: {{ checklist.comments }}</p>
+    {% if checklist.comments %}
+        <p>Comments: {{ checklist.comments }}</p>
+    {% endif %}
     {% if checklist.entries %}
     <table id="checklist-detail" class="checklists-list">
         <thead>
@@ -33,9 +35,9 @@
                 
                 <td class="name">{{ entry.plant_name|italicize_if_scientific|safe }}</td>
                 <td class="image"><img class="checklist-thumb" src="{{entry.plant_photo.thumb.url}}" /></td>
-                <td class="date-sighted">{{ entry.date_found|date:"m/d/Y"|default:"N/A" }}</td>
-                <td class="location">{{ entry.location|default:"N/A" }}</td>
-                <td class="date-posted">{{ entry.date_posted|date:"m/d/Y"|default:"N/A" }}</td>
+                <td class="date-sighted">{{ entry.date_found|date:"m/d/Y"|default:"" }}</td>
+                <td class="location">{{ entry.location|default:"" }}</td>
+                <td class="date-posted">{{ entry.date_posted|date:"m/d/Y"|default:"" }}</td>
                 <td class="note">
                     <a href="javascript:alert('Coming soon!');" rel="shadowbox;height=240;width=550">View</a>
                     <div class="note-text">{{ entry.note|default:"&nbsp;" }}</div>
