--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -35,8 +35,8 @@
           <thead>
               <tr>
                   <th class="first"></th>
-                  <th class="checklistview-name">Plant Checklist Title<span></span></th>
-                  <th class="owner">Owner</th>
+                  <th class="checklistview-name">Checklist Title<span></span></th>
+                  <!--th class="owner">Owner</th-->
                   <th class="last"></th>
               </tr>
           </thead>
@@ -44,11 +44,12 @@
               {% for checklist in checklists %}
               <tr id="checklist-{{ checklist.pk }}">
                   <td class="first"><input type="checkbox" name="checklist_id" value="{{ checklist.pk }}"></td>
-                  <td class="checklistview-name">{{ checklist.name }}</td>
+                  <td class="checklistview-name"><a
+                      href="{% url 'ps-checklist' checklist.pk %}">{{ checklist.name }}</a>
+                  </td>
                   {% ifequal user.username checklist.owner.name %}
-                  <td class="owner">Me</td>
+                  <!--td class="owner">Me</td-->
                   <td class="last">
-                      <a href="{% url 'ps-checklist' checklist.pk %}">View</a>
                       <a href="{% url 'ps-checklist-edit' checklist.pk %}">Edit</a>
                       <a href="{% url 'ps-checklist-export' checklist.pk %}" 
                           title="Export to CSV format">Export</a>
