--- a/gobotany/plantshare/templates/new_checklist.html
+++ b/gobotany/plantshare/templates/new_checklist.html
@@ -4,7 +4,7 @@
 {% block title %}Create New Plant Checklist: PlantShare{% endblock %}
 
 {% block more_meta_link %}
-<link rel="stylesheet" href="/static/css/smoothness/jquery-ui-1.9.2.custom.min.css" />
+<link rel="stylesheet" href="/static/css/smoothness/jquery-ui-1.9.2.custom.min.css">
 {% endblock %}
 
 {% block js_require %}
@@ -57,15 +57,17 @@
         {% csrf_token %}
         <header>
             {{ checklist_form.non_field_errors }}
+            <label>Checklist title (required)</label>
             {{ checklist_form.name }}
             {{ checklist_form.name.errors }}
+            <label>Comments</label>
             {{ checklist_form.comments }}
             {{ checklist_form.comments.errors }}
         </header>
         <table id="add-sightings-table">
             <thead>
                 <tr>
-                    <th class="name">Plant Name <span>(Required)</span></th>
+                    <th class="name">Plant Name <span>(required)</span></th>
                     <th class="image">Image</th>
                     <th class="date-sighted">Date Sighted</th>
                     <th class="location">Location</th>
@@ -77,7 +79,8 @@
             <tfoot>
                 <tr>
                     <td colspan="7">
-                        <a href="#" class="add-new-row">Add New Row &#43;</a>
+                        <a href="#" class="add-new-row"
+                            tabindex="500">Add New Row &#43;</a>
                     </td>
                 </tr>
             </tfoot>
@@ -118,8 +121,9 @@
         </table><!-- /#add-sightings-table -->
         <div class="form-actions">
             <input type="submit" class="ps-button orange-button caps"
-            id="save-btn" value="Save">
-            <a href="{% url 'ps-checklists' %}" class="cancel-link">Cancel</a>
+            id="save-btn" value="Save" tabindex="510">
+            <a href="{% url 'ps-checklists' %}" class="cancel-link"
+                tabindex="520">Cancel</a>
         </div><!-- /.form-actions -->
     </form><!-- /#checklist-fillout -->
 </div><!-- /.ps-section -->
