--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1568,6 +1568,33 @@ body.plantshare {
                 }
             }
         }
+        &#sightings {
+            #main > ul {
+                > li ul {
+                    margin: 0;
+                    li {
+                        margin-bottom: 12px;
+                    }
+                }
+                .title {
+                    display: inline-block;
+                    margin: 0;
+                }
+                .photolink + .title {
+                    margin-left: 0;
+                }
+            }
+        }
+        &.sighting {
+            .map {
+                height: 250px !important;
+                width: 100% !important;
+            }
+            .photos ul img {
+                max-height: none;
+                max-width: 100%;
+            }
+        }
     }
 }
 /* These styles apply to smartphones and tablets */
